# roman-urdu-normalizer

./: .dockerignore  .gitignore  AUTHENTICITY.md  CERTIFICATE.html  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  FINAL-CHECKLIST.md  LICENSE  PROVENANCE.md  PUSH-NOW.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: tests.yml
app/: __init__.py  cli.py  console.py  data.py  exceptions.py  main.py  models.py  multitoken.py  normalizer.py  phonetic.py
benchmark/: __init__.py  comparison.py  generate_adversarial.py  gold_standard.jsonl  gold_standard_adversarial.jsonl  heldout.jsonl  latency.py  render_charts.py  results.md  run_benchmark.py
client/: __init__.py  normalizer_client.py
docs/: beginner-summary.md  corpus.md  deployment.md  downstream.md  limitations.md
docs/daily-notes/: future-dataset-ideas-20260703-184525-553888854.md  input-patterns-20260703-183933-1830190567.md  reviewer-checklist-20260703-184525-553888854.md
docs/reviewer-notes/: example-coverage-20260630-184712.md  normalization-review-20260630-184712.md
docs/tiny-notes/: example-inputs-20260710-164501-1870376082.md  limitations-reminder-20260710-164501-1870376082.md  reviewer-checklist-20260710-164501-1870376082.md
examples/: README.md  minimal_example.py  normalize_csv.py  normalize_whatsapp.py  search_recall_demo.py
scripts/: __init__.py  review_unknowns.py
static/: index.html
tests/: test_adversarial.py  test_api.py  test_client.py  test_data.py  test_multitoken.py  test_normalizer.py  test_phonetic.py  test_regressions.py
